@startuml fig3-4
title 图 3-4  系统全局 E-R 图

skinparam monochrome true
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontName SimSun
skinparam defaultFontSize 11
skinparam backgroundColor #FFFFFF
hide circle
hide methods

entity "users" as users {
  * id : INT
  --
  phone
  password_hash
  nickname
  created_at
}

entity "favorite_places" as fav {
  * id : INT
  --
  user_id
  name
  address
  longitude
  latitude
}

entity "navigation_history" as navhist {
  * id : INT
  --
  user_id
  dest_name
  dest_lng
  dest_lat
  created_at
}

entity "collaboration_contacts" as contacts {
  * id : INT
  --
  user_id
  name
  phone
  tag
}

entity "collaboration_messages" as messages {
  * id : INT
  --
  user_id
  contact_name
  preview
  unread_count
}

entity "collaboration_music_tracks" as tracks {
  * id : INT
  --
  user_id
  title
  artist
  progress_ms
}

entity "collaboration_playback_state" as playback {
  * id : INT
  --
  user_id
  track_id
  is_playing
  position_ms
}

entity "collaboration_continuation_tasks" as tasks {
  * id : INT
  --
  user_id
  type
  source_device
  target_device
  payload
  status
}

entity "sync_logs" as logs {
  * id : INT
  --
  user_id
  event_type
  content
  created_at
}

entity "collaboration_active_devices" as active {
  * id : INT
  --
  user_id
  device_id
  device_role
  online
}

entity "collaboration_overview" as overview {
  * id : INT
  --
  user_id
  phone_status
  car_status
  unread_messages
}

users ||--o{ fav
users ||--o{ navhist
users ||--o{ contacts
users ||--o{ messages
users ||--o{ tracks
users ||--o{ playback
users ||--o{ tasks
users ||--o{ logs
users ||--o{ active
users ||--o{ overview
tracks ||--o{ playback

@enduml
